fix scroll and editor size on mobile

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -79,6 +79,7 @@
   }
 
   body {
+    overflow: hidden;
     @apply bg-background text-foreground;
   }
 }
